# boucan_game

./: .gitignore  README.md  cahier-des-charges.md  compose.prod.yml  compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/data/: questionbank.db  questionbank.db.bak-20260630-155048  translation_cache.json
backend/game/: blindtest.py  builtin_packs.py  engine.py  models.py  packs_store.py  qcm.py  spotify_client.py  store.py
backend/routers/: packs.py  sessions.py  spotify.py
backend/scripts/bank/: README.md  bank_db.py  build_packs.py  import_aigen.py  import_flags.py  import_jsonquizz.py  import_openquizzdb.py  ingest_opentriviaqa.py  opentriviaqa.py  review.html  review.js  review_otq.html  themes.py  translate.py
backend/scripts/bank/aigen/: bd_01.json  cinema_01.json  cinema_02.json  cinema_03.json  cinema_04.json  geographie_01.json  histoire_01.json  histoire_02.json  jeux_video_01.json  jeux_video_02.json  jeux_video_03.json  jeux_video_04.json  jeux_video_05.json  musique_01.json  musique_02.json  musique_03.json  musique_04.json  sciences_01.json  sciences_02.json  sciences_03.json  series_01.json  series_02.json  series_03.json  series_04.json  sports_01.json  television_01.json
backend/tests/: conftest.py  test_bank_db.py  test_blindtest.py  test_build_packs.py  test_engine.py  test_ingest_opentriviaqa.py  test_opentriviaqa.py  test_packs_router.py  test_packs_store.py  test_qcm.py  test_spotify_client.py  test_themes.py  test_translate.py  test_ws.py
backend/ws/: manager.py
frontend/: .env.example  Dockerfile  (+5 more)
(+69 files in other folders)
