[project]
name = "boucan-backend"
version = "0.1.0"
description = "Boucan backend — FastAPI + WebSockets, in-memory game state (buzzer / QCM / blindtest)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
timeout = 30
